[package]
name = "bitsave"
version = "0.1.0"
description = "Bitsave SaveFi Protocol - Native Solana Program"
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "bitsave"

[dependencies]
borsh = "1.5.1"
solana-program = "1.18.26"
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.63"

[dev-dependencies]
borsh = "1.5.1"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
